--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/storybook__addon-actions": "^3.4.1",
+    "@types/storybook__react": "^4.0.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-scripts-ts": "3.1.0"
@@ -11,14 +13,26 @@
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
+    "@kadira/storybook": "^2.21.0",
+    "@storybook/addon-actions": "^4.1.11",
+    "@storybook/addon-storysource": "^4.1.11",
+    "@storybook/react": "^4.1.11",
     "@types/jest": "^24.0.0",
     "@types/node": "^11.9.0",
     "@types/react": "^16.8.2",
     "@types/react-dom": "^16.8.0",
     "@types/recharts": "^1.1.10",
+    "@types/storybook__addon-actions": "^3.0.3",
+    "@types/storybook__addon-links": "^3.3.1",
+    "@types/storybook__addon-notes": "^3.3.1",
+    "@types/storybook__addon-storyshots": "^3.4.2",
+    "@types/storybook__react": "^3.0.7",
+    "awesome-typescript-loader": "^5.2.1",
     "recharts": "^1.4.2",
     "typescript": "^3.3.3"
   }
