[Save] storybook state

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
-    "storybook": "start-storybook -p 7000 -c .storybook",
+    "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
   "devDependencies": {
@@ -43,6 +43,7 @@
     "@types/storybook__react": "^3.0.7",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.5",
+    "react-docgen-typescript-loader": "^3.0.1",
     "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "recharts": "^1.4.3",
     "typescript": "^3.3.3"
